--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "hrkut/zbierka-uloh",
+  "name": "thevajko/zbierka-uloh",
   "description": "Zbierka úloh z VAII",
   "minimum-stability": "stable",
   "license": "MIT",
