Oprava dockerfile v zipovači

--- a/php/zipper/dockerfile
+++ b/php/zipper/dockerfile
@@ -7,9 +7,8 @@ RUN pecl install xdebug && docker-php-ext-enable xdebug \
     && echo "xdebug.client_port=9000" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
     && echo "xdebug.client_host=host.docker.internal" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 
-# install PDO module
-RUN docker-php-ext-install pdo_mysql
 
-RUN apk add --no-cache zip libzip-dev \
+RUN apt-get update \
+    && apt-get -yq install zip libzip-dev \
     && docker-php-ext-configure zip \
     && docker-php-ext-install zip
