--- a/php/hangman-game/docker-compose.yml
+++ b/php/hangman-game/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   web:
     image: php:8.0-apache
-    container_name: php_web
+    container_name: hangman
     volumes:
       - ./:/var/www/html/
     ports:
