--- a/php/hangman-game/docker-compose.yml
+++ b/php/hangman-game/docker-compose.yml
@@ -1,11 +1,8 @@
 version: '3'
 services:
   web:
-    image: php:8.0-apache
-    container_name: hangman
+    build: .
     volumes:
       - ./:/var/www/html/
     ports:
       - "80:80"
-    stdin_open: true
-    tty: true
